--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -10,7 +10,7 @@
     background: $bottom-gradient;
     border-top-left-radius: 400% 20%;
     border-top-right-radius: 400% 20%;
-    padding: 20px 20px 0 20px;
+    padding: 20px;
     margin: 0 -20px;
     width: 100%;
     min-height: inherit;
