--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -70,7 +70,7 @@ p {
 h5.section-title {
     text-transform: uppercase;
     display: flex;
-    margin: 0.8em 0;
+    margin: 1em 0;
 }
 
 a {
